--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    MODULO DI CONTATTO
-                </h2>
+                    MODULO DI CONTATTO.</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
                     Aggiungi facilmente moduli di iscrizione e di contatto senza alcuna integrazione lato server.
                 </h3>
@@ -41,9 +40,9 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zKl95eqnqPeKWoQmyusdAuLV82DjZbvpLLcn6s/3p+JLWe8BB13qjy4MDPIAIvqyv2VHUhacZWCPQzlph4uDhSuGrf69b/K6ykrQZKSOg03H435fG+uE8afBEQM+2vXA">
+                <form action="formhandler.php" method="POST" class="mbr-form form-with-styler">
                     <div class="row row-sm-offset">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Grazie per aver compilato il modulo!</div>
+                        
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                         </div>
                     </div>
@@ -73,13 +72,12 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/formoid/formoid.min.js"></script>
   
   
 </body>
